		'tunefs.lustre --param="ost.quota_type=ug1" $MDTDEV'
		or (for 1.4.12/1.6.5 quota files)
		'tunefs.lustre --param="mdt.quota_type=ug2" $MDTDEV',
		'tunefs.lustre --param="ost.quota_type=ug2" $MDTDEV'		
	  For more information, please refer to bugzilla 13904.
	* Output of lfs quota has been made less detailed by default,
	  old (verbose) output can be obtained by using -v option.

Severity   : enhancement
Bugzilla   : 15754
Description: lfs quota tool enhancements
Details    : added units specifiers support for setquota, default to
             current uid/gid for quota report, short quota stats by
             default, nonpositional parameters for setquota, added
             llapi_quotactl manual page.

Severity   : normal
Bugzilla   : 16037
Description: Client runs out of low memory
Details    : Consider only lowmem when counting initial number of llap pages

Severity   : normal
Bugzilla   : 15625
Description: *optional* service tags registration
Details    : if the "service tags" package is installed on a Lustre node
             When the filesystem is mounted, a local-node service tag will
	     be created.  See http://inventory.sun.com/ for more information
	     about the Service Tags asset management system.

Severity   : normal
Bugzilla   : 15825
Description: Kernel BUG tries to release flock
Details    : Lustre does not destroy flock lock before last reference goes
             away. So always drop flock locks when client is evicted and 
             perform unlock regardless of successfulness of speaking to MDS.

Severity   : enhancement
Bugzilla   : 16189
Description: Update to RHEL4 kernel-2.6.9-67.0.20.

Severity   : normal
Bugzilla   : 15210
Description: add refcount for osc callbacks, so avoid panic on shutdown

Severity   : normal
Bugzilla   : 12653
Description: sanity test 65a fails if stripecount of -1 is set
Details    : handle -1 striping on filesystem in ll_dirstripe_verify

Severity   : normal
Bugzilla   : 16014