@@ -38,6 +38,13 @@ tbd Sun Microsystems, Inc.
 	* Output of lfs quota has been made less detailed by default,
 	  old (verbose) output can be obtained by using -v option.
 
+Severity   : normal
+Bugzilla   : 16318
+Frequency  : rare, on PPC clients
+Description: don't swab ost objects in response about directory, because
+             this not exist.
+Details    : bug similar bug 14856, but in different function.
+
 Severity   : enhancement
 Bugzilla   : 15754
 Description: lfs quota tool enhancements
